stackboost-for-supportcandy/assets/css/ticket-widget.css
.wpsc-it-widget .wpsc-widget-header .wpsc-itw-actions {
    float: right;
    display: flex;
    gap: 10px;
    align-items: center;
}

.wpsc-itw-edit-ico,
.wpsc-itw-toggle {
    width: 20px;
    height: 20px;
    font-size: 20px;
    cursor: pointer;
}

.wpsc-itw-edit-ico::before,
.wpsc-itw-toggle::before {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    display: inline-block;
    font-family: dashicons;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    height: 100%;
    line-height: 1;
    text-align: center;
    text-decoration: inherit;
    vertical-align: top;
    width: 100%;
}

.wpsc-itw-edit-ico::before {
    content: ""; /* Dashicon for 'edit' */
}

.wpsc-itw-toggle::before {
    content: ""; /* Dashicon for 'down arrow' */
}

.wpsc-itw-edit-ico.wpsc-itw-ico-disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

